fixed overflow

--- a/MarkandEleanor2019/wwwroot/css/style.css
+++ b/MarkandEleanor2019/wwwroot/css/style.css
@@ -133,7 +133,6 @@ h2 {
     align-items: flex-start;
     flex-direction: row;
     justify-content: center;
-    overflow: hidden;
 }
 
     #photos a {
